<resources>
    <string name="app_name">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rich_sanches">Rich Sanches</string>
    <string name="alive_human">Alive - Human</string>
    <string name="last_know_location">Last know location:</string>
    <string name="earth_replacement_dimencion">Earth(Replacement Dimencion)</string>
    <string name="first_know_location">First known location</string>
    <string name="reload">Reload</string>
</resources>