<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="#4E4E4E">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="#424040"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:orientation="vertical"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rich_sanches"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <View
            android:id="@+id/view_indicator"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="8dp"
            android:background="@drawable/indicator_green"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@id/indicator"
            app:layout_constraintBottom_toBottomOf="@id/indicator"/>

        <TextView
            android:id="@+id/indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alive_human"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_indicator"
            app:layout_constraintTop_toBottomOf="@+id/name_person" />


        <TextView
            android:id="@+id/first_seen_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/first_know_location"
            android:textSize="10sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/view_indicator" />


        <TextView
            android:id="@+id/first_seen_location_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/earth_replacement_dimencion"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/first_seen_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar" />


        <TextView
            android:id="@+id/last_seen_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/last_know_location"
            android:textSize="10sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/first_seen_location_value" />


        <TextView
            android:id="@+id/last_seen_location_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="135dp"
            android:text="@string/earth_replacement_dimencion"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/last_seen_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>